# lpk-unpack

./: .gitignore  Cargo.toml  package.json  readme.md
.github/workflows/: release.yml  rust.yml
projects/live2d-parser/: Cargo.toml  readme.md
projects/live2d-parser/src/: lib.rs
projects/live2d-parser/src/cubism_v1/: mod.rs
projects/live2d-parser/src/cubism_v1/moc/: affines.rs  deformers.rs  mod.rs  objects.rs  params.rs  parts.rs  pivots.rs
projects/live2d-parser/src/cubism_v3/: mod.rs
projects/live2d-parser/src/cubism_v3/moc3/: element_count.rs  meshes.rs  mod.rs  params.rs  parts.rs
projects/live2d-parser/src/errors/: mod.rs
projects/live2d-parser/src/helpers/: mod.rs
projects/live2d-parser/tests/: main.rs
projects/lpk-core/: Cargo.toml  readme.md
projects/lpk-core/src/: errors.rs  helpers.rs  lib.rs  lpk_loader.rs  utils.rs
projects/lpk-core/src/configs/: mod.rs
projects/lpk-core/src/errors/: mod.rs
projects/lpk-core/src/lpk_loader/extractors/: mod.rs
projects/lpk-core/tests/: main.rs
projects/lpk-core/tests/1363062649/: config.json
projects/lpk-gui/: Cargo.toml  Dioxus.toml
projects/lpk-gui/assets/: index.scss
projects/lpk-gui/src/: lib.rs  main.rs
projects/lpk-gui/src/utils/: mod.rs
projects/lpk-web/: Cargo.toml
projects/lpk-web/src/: lib.rs  main.rs
