[workspace]
resolver = "3"
members = ["projects/*"]
default-members = [
    "projects/lpk-core",
    "projects/lpk-gui",
]
exclude = [
    "projects/.DS_Store",
]


[workspace.package]
version = "0.0.0"

[profile.release]
lto = true
panic = "abort"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
