[package]
name = "live2d-parser"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "LPK文件解包器GUI应用"
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.3", features = ["desktop"] }
rfd = "0.15.3"
log = "0.4"

[dependencies.lpk]
path = "../lpk-core"
version = "0.0.*"

[dev-dependencies]

[features]
default = []
