[package]
name = "live2d-parser"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "LPK文件解包器GUI应用"
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]

[features]
default = []
