[package]
name = "live2d-parser"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "The parser for Live2D's `*.model.json`, `*.moc`"
repository = "https://github.com/oovm/live2d-unpacker"
documentation = "https://docs.rs/live2d-parser"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
integer-encoding = "4.0.2"

[dev-dependencies]
tracing-subscriber = "0.3.19"

[features]
default = []
