[package]
name = "lpk"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Parse the `Live2dViewerEx`'s `.lkp` file"
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]

[dev-dependencies]

[features]
default = []
