[package]
name = "lpk"
version = {  workspace = true }
authors = ["Aster <192607617@qq.com>"]
description = "Decrypt the `.lkp` file from `Live2dViewerEx`"
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
md5 = "0.7"
zip = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
tracing = "0.1.41"
uuid = "1.16.0"

[dev-dependencies]
tracing-subscriber = "0.3.19"
tempfile = "3.8"

[features]
default = []
