[package]
name = "lpk-unpack"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.3", features = ["desktop"] }

[dev-dependencies]

[features]
default = []
